# poetryup

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml  update-dependencies.yaml
poetryup/: poetryup.py  utils.py
src/poetryup/: __init__.py  dependency.py  main.py  poetryup.py  pyproject.py  utils.py
src/poetryup/core/: cmd.py  poetry.py  pyproject.py
src/poetryup/models/: dependency.py
tests/: conftest.py
tests/unit/: test_dependency.py  test_poetry.py  test_poetryup.py  test_pyproject.py
tests/unit/fixtures/expected_pyproject/: pyproject.toml  pyproject_with_dependency_containing_capital_letters.toml  pyproject_with_dependency_containing_underscore_character.toml  pyproject_with_dependency_groups.toml  pyproject_with_exact_version_dependency.toml  pyproject_with_git_dependency.toml  pyproject_with_restricted_dependency.toml
tests/unit/fixtures/input_pyproject/: pyproject.toml  pyproject_with_dependency_containing_capital_letters.toml  pyproject_with_dependency_containing_underscore_character.toml  pyproject_with_dependency_groups.toml  pyproject_with_exact_version_dependency.toml  pyproject_with_restricted_dependency.toml
