[tool.poetry]
name = "poetryup"
version = "0.6.0"
description = "Update dependencies and bump their version in the pyproject.toml file"
authors = ["Mousa Zeid Baker"]
packages = [
    { include = "poetryup", from = "src" },
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MousaZeidBaker/poetryup"
repository = "https://github.com/MousaZeidBaker/poetryup"
keywords=[
    "packaging",
    "dependency",
    "poetry",
    "poetryup",
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.6"
tomlkit = "^0.8.0"
typer = "^0.4.0"
packaging = "^21.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
black = [
    {version = "^20.8b1", python = "<=3.6.2"},
    {version = "^21.12b0", python = ">3.6.2"},
]
flake8 = "^4.0.1"
flake8-black = "^0.2.4"
flake8-isort = "^4.1.1"
isort = { version = "^5.10.1", python = "^3.6.1" }
pre-commit = { version = "^2.17.0", python = "^3.6.1" }

[tool.poetry.scripts]
poetryup = "poetryup.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
